fix all the remaining broken things

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ jobs:
       script: npm run lint
       name: Unit Tests
       script: npm t
+      name: Build Test
+      script: npm run build
 
 install:
   - npm i
